# noted-gtk

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  io.github.devklick.noted.flatpak.yml  meson.build  package-lock.json  package.json  readme.md  release.config.mjs  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: build.yml
build-assets/: io.github.devklick.noted.js
data/: io.github.devklick.noted.data.gresource.xml  io.github.devklick.noted.desktop  meson.build
data/gschemas/: io.github.devklick.noted.gschema.xml
resources/schemas/: io.github.devklick.noted.gschema.xml
scripts/: post-build.mjs  prepare.mjs  update-meson-version.mjs
scripts/prepare/: update-meson-version.mjs
src/: io.github.devklick.noted.js  io.github.devklick.noted.src.gresource.xml  main.ts  meson.build  styles.css
src/core/: PreferencesManager.ts  ShortcutManager.ts  StyleManager.ts
src/core/fs/: AppDataDir.ts  AppDir.ts  NotesDir.ts  NotesMetaFile.ts
src/core/utils/: NoteSerializer.ts  StyleManager.ts  action.ts  click.ts  fs.ts  gesture.ts  icon.ts  num.ts  obj.ts  str.ts  timing.ts  widget.ts
src/widgets/Application/: Application.ts
src/widgets/Content/: Content.ts
src/widgets/Content/ContentHeader/: BurgerMenu.ts  ContentHeader.ts  ContentHeaderTitle.ts
src/widgets/ContextMenu/: ContextMenu.ts  index.ts
src/widgets/DropDown/: DropDown.ts  FontSizePicker.ts  StylePresetPicker.ts  index.ts
src/widgets/Layout/: Layout.ts
src/widgets/SettingsWindow/: SettingsWindow.ts
src/widgets/SideBar/: SideBar.ts
src/widgets/Window/: Window.ts
(+23 files in other folders)
